[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="Center" type="CenterContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Center"]
custom_minimum_size = Vector2(360, 0)
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Title" type="Label" parent="Center/VBox"]
text = "SPACE NODE"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Center/VBox"]
text = "Play"

[node name="BuilderButton" type="Button" parent="Center/VBox"]
text = "Ship Builder"

[node name="QuitButton" type="Button" parent="Center/VBox"]
text = "Quit"
